completed blank buttons, added new button to schedule ride, and fixed alignment of schedule ride

--- a/src/Pages/ScheduleRide/scheduleRide.css
+++ b/src/Pages/ScheduleRide/scheduleRide.css
@@ -2,24 +2,43 @@
   text-align: center;
   font-size: 2rem;
   position: relative;
- 
   top:200px;
 }
 div.DD{
-  margin-left: 45%;
+  text-align: center;
   margin-top: 5%;
+  margin-bottom: 30px;
+  background-color: transparent;
+  border-color: transparent transparent white transparent;
 }
+
+.pickupAlign{
+  margin-top: 20px;
+  position: relative;
+  left: -5%;
+}
+
+.timeAlign{
+  position: relative;
+  margin-top: 20px;
+  left: -5%;
+}
+
 div.Date{
   margin-top: -4%;
+  text-align: center;
 }
 div.all{
-  margin-left: 15%;
+  text-align: center;
 }
 div.Time{
-  margin-top: 7%;
+  text-align: center;
 }
 div.Amnt{
-  margin-top: 7%;
+  margin-top: 20px;
+  text-align: center;
+  position: relative;
+  left: -5%;
 }
 @media screen and (min-width: 500px) {
   div.DD{
