--- a/src/components/WideButtonComponent/wideButton.css
+++ b/src/components/WideButtonComponent/wideButton.css
@@ -13,6 +13,13 @@
     margin-left: 0.3em;
     border-radius: 10px;
     border-style: hidden;
-    font-size: 20px;
-    margin-left:1em; 
+    font-size: 2.5vw;
+    padding-bottom: 3vw;
 }
+
+@media screen and (max-width: 500px) {
+    .wide-button {
+          font-size: 6vw;
+          padding-bottom: 7vw;
+        }
+    }
